# RLS-app

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: API_SCHEMA.md  (+9 more)
services/api/: Dockerfile  pyproject.toml  requirements-model.txt  requirements.txt
services/api/app/: main.py
services/api/app/agent/: safety.py  safety_rules.yaml
services/api/app/api/: deps.py  routes_agent.py  routes_auth.py  routes_prediction.py  routes_questionnaire.py  routes_reports.py  routes_users.py  routes_wearable.py
services/api/app/core/: config.py  security.py
services/api/app/db/: models.py  session.py
services/api/app/schemas/: agent.py  prediction.py  questionnaire.py  user.py  wearable.py
services/api/app/services/: agent_planner.py  education_library.py  feature_engineering.py  inference.py  knowledge_base.py  model_registry.py  risk_interpretation.py  rls_experiments_adapter.py  rls_followup.py  rls_screening.py  sleep_agent.py  sleep_trend_analyzer.py  user_memory.py
services/api/app/tests/: agent_eval_cases.py  conftest.py  test_api.py
services/api/knowledge_base/general_sleep/: aasm_sleep_hygiene.md  nhlbi_sleep_habits.md  world_sleep_society_tips.md
services/api/knowledge_base/insomnia/: aasm_2021_behavioral_insomnia.md
services/api/model_artifacts/: README.md
services/api/templates/: boundary_disclaimer.yaml  daytime_sleepiness_warning.yaml  general_sleep_advice.yaml  insomnia_education.yaml  osa_warning.yaml  red_flag_referral.yaml  relaxation_before_bed.yaml  rls_lifestyle_advice.yaml  sleep_environment.yaml  trend_summary.yaml
(+90 files in other folders)
